--- a/style.css
+++ b/style.css
@@ -43,9 +43,9 @@
   font-size: 0.8rem;
   margin-bottom: 2.5rem;
 }
-
+/* styling buttons */
 .cta {
-  padding: 16px;
+  padding: 12px 16px;
   font-size: 16px;
   color: wheat;
   background-color: #ff5959;
@@ -57,3 +57,86 @@
   color: #ff5959;
   background-color: wheat;
 }
+
+/* Donate today section */
+
+#donate {
+  margin-top: 2.5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+/* desc */
+.donate-desc {
+  text-align: center;
+  width: 60%;
+}
+.donate-desc h1 {
+  font-size: 45px;
+}
+
+.donate-desc p {
+  margin-top: 2.5rem;
+  font-size: 18px;
+  color: #5c5b5b;
+}
+
+/* amount styling */
+.donate-amount-area {
+  margin-top: 2.5rem;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  padding: 1rem;
+  justify-content: center;
+  align-items: center;
+}
+
+.amount {
+  width: 135px;
+  height: 125px;
+  margin: 1rem;
+  background-color: #fafafa;
+  color: #707070;
+  font-weight: bold;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-radius: 10px;
+}
+
+#active {
+  background-color: #ffeeee;
+  color: #ff5959;
+  border: 1px solid #ff5959;
+}
+
+/* other */
+.other {
+    margin-top: 2rem;
+  display: flex;
+  width: 50%;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.other p{
+ font-size: 18px;
+ color: #B3B3B3;
+ margin-bottom: .8rem;
+}
+
+hr{
+    width: 100%;
+    margin: 10px auto;
+    background-color: #DADADA;
+    margin-bottom: 2rem;
+}
+
+/* Donate now section ends */
+
+
