--- a/style.css
+++ b/style.css
@@ -117,26 +117,73 @@
 
 /* other */
 .other {
-    margin-top: 2rem;
+  margin-top: 2rem;
   display: flex;
   width: 50%;
   justify-content: center;
   align-items: center;
   flex-direction: column;
 }
-.other p{
- font-size: 18px;
- color: #B3B3B3;
- margin-bottom: .8rem;
+.other p {
+  font-size: 18px;
+  color: #b3b3b3;
+  margin-bottom: 0.8rem;
 }
 
-hr{
-    width: 100%;
-    margin: 10px auto;
-    background-color: #DADADA;
-    margin-bottom: 2rem;
+hr {
+  width: 100%;
+  margin: 10px auto;
+  background-color: #dadada;
+  margin-bottom: 2rem;
 }
 
 /* Donate now section ends */
 
+#plan {
+  margin-top: 2.5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 
+.plan-area {
+  margin-top: 2.5rem;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+
+.plan-box {
+  width: 330px;
+  height: 300px;
+  background: rgba(79, 157, 166, 0.1);
+  border-radius: 10px;
+  text-align: left;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+
+  padding: 2rem;
+  margin: 1.2rem;
+}
+.plan-box h4 {
+  font-size: 24px;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+.plan-box p {
+  font-size: 16px;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  color: #707070;
+}
+.fa-solid {
+  font-size: 36px;
+  color: #3a3a3a;
+}
+
+/* end of donation plan */
