--- a/style.css
+++ b/style.css
@@ -45,6 +45,9 @@
 }
 /* styling buttons */
 .cta {
+  /* display: block;
+    width: 20%; */
+  /* margin: 0 auto; */
   padding: 12px 16px;
   font-size: 16px;
   color: wheat;
@@ -187,3 +190,53 @@ hr {
 }
 
 /* end of donation plan */
+/* start of tagline section */
+
+#tagline {
+  margin-top: 3.5rem;
+  margin-left: 2rem;
+  padding: 1rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.half-area {
+  margin-bottom: 2.5rem;
+  margin-top: 2.5rem;
+
+  width: 40vw;
+  height: 40vh;
+}
+.half-area img {
+  margin-top: 2rem;
+  margin-left: 2rem;
+  width: 65%;
+  height: 125%;
+}
+.half-area h1 {
+  font-size: 40px;
+  margin-top: 2rem;
+}
+.half-area p {
+  width: 80%;
+  margin-top: 2rem;
+  font-size: 16px;
+  font-weight: normal;
+  color: #707070;
+  margin-bottom: 2rem;
+}
+/* end of tagline service section */
+
+/* start of wor vide section */
+#register{
+    margin-top: 3.5rem;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    padding: 1rem;
+    justify-content: center;
+    align-items: center;
+  }
