--- a/style.css
+++ b/style.css
@@ -45,9 +45,6 @@
 }
 /* styling buttons */
 .cta {
-  /* display: block;
-    width: 20%; */
-  /* margin: 0 auto; */
   padding: 12px 16px;
   font-size: 16px;
   color: wheat;
@@ -231,12 +228,94 @@ hr {
 /* end of tagline service section */
 
 /* start of wor vide section */
-#register{
-    margin-top: 3.5rem;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    padding: 1rem;
-    justify-content: center;
-    align-items: center;
-  }
+#register {
+  margin-top: 8.5rem;
+
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  padding: 1rem;
+  justify-content: center;
+  align-items: center;
+}
+
+.form-bg {
+  background-image: url(/Img/formbg.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 80vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.form-area {
+  background: rgba(255, 255, 255, 0.3);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
+  border-radius: 10px;
+  border-radius: 30px;
+  width: 500px;
+  /* height: 520px; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  /* margin-top: 2rem; */
+  padding: 3rem;
+  border: 1px solid  rgba(255, 255, 255, 0.3);
+}
+.form-bg h1 {
+  color: white;
+  margin: 0.5rem;
+}
+.form-area p {
+  color: white;
+  margin: 0.4rem;
+  font-size: 18px;
+}
+
+.form-area input {
+  color: #3a3a3a;
+  margin: 0.7rem;
+  padding: 0.6rem;
+  font-size: 16px;
+  border-radius: 05px;
+  border: none;
+}
+.form-area label {
+  color: white;
+}
+.form-area input:focus {
+  outline: none;
+}
+.form-area #div {
+  margin-left: 10px;
+  margin-bottom: 0.5rem;
+  padding: 10px;
+  width: 95%;
+  height: 12%;
+  border-radius: 5px;
+}
+
+.form-area #div option {
+  padding: 2rem;
+  margin: 1rem;
+}
+.form-area #div :focus {
+  outline: none;
+}
+button {
+  padding: 12px 16px;
+  font-size: 16px;
+  position: relative;
+  left: 35%;
+  top: 05%;
+  color: wheat;
+  background-color: #ff5959;
+  cursor: pointer;
+  border: none;
+  border-radius: 5px;
+}
