--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap");
 
+/* lobster font footer */
+@import url("https://fonts.googleapis.com/css2?family=Lobster&display=swap");
+
+/* reset css */
 * {
   font-family: "Inter", sans-serif;
   margin: 0;
@@ -52,6 +56,7 @@
   text-decoration: none;
   border: none;
   border-radius: 5px;
+  box-shadow: 0px 12px 24px rgba(101, 0, 0, 0.24);
 }
 .cta:hover {
   color: #ff5959;
@@ -138,7 +143,7 @@ hr {
 }
 
 /* Donate now section ends */
-
+/* plan section starts */
 #plan {
   margin-top: 2.5rem;
   display: flex;
@@ -265,7 +270,7 @@ hr {
   flex-direction: column;
   /* margin-top: 2rem; */
   padding: 3rem;
-  border: 1px solid  rgba(255, 255, 255, 0.3);
+  border: 1px solid rgba(255, 255, 255, 0.3);
 }
 .form-bg h1 {
   color: white;
@@ -307,7 +312,14 @@ hr {
 .form-area #div :focus {
   outline: none;
 }
-button {
+
+
+/* place holder styling */
+::-webkit-input-placeholder { color: rgb(175, 175, 175) !important; 
+font-size: 15px !important;}
+
+
+.reg-btn {
   padding: 12px 16px;
   font-size: 16px;
   position: relative;
@@ -318,4 +330,98 @@ button {
   cursor: pointer;
   border: none;
   border-radius: 5px;
+  box-shadow: 0px 12px 24px rgba(101, 0, 0, 0.24);
 }
+/* end of registration */
+
+
+/* start of subscribe */
+#subscribe {
+  margin-top: 4rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.subs-desc {
+  display: flex;
+  width: 50%;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.subs-desc p {
+  color: #707070;
+  margin: 2rem;
+}
+.subs-desc h1 {
+  font-size: 45px;
+  font-weight: bold;
+}
+
+/* main box */
+.subs-box {
+  margin: 1rem;
+  width: 700px;
+  height: 150px;
+
+  background-color: #fff4d6;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.subs-form {
+  display: flex;
+  flex-direction: ;
+}
+.subs-form input {
+  display: block;
+  height: 03rem;
+  width: 20rem;
+  border: 1px solid #dbdbdb;
+  color: #d9d9d9;
+}
+.subs-form input:focus {
+  outline: none;
+}
+.subs-btn {
+  padding: 12px 16px;
+  font-size: 16px;
+  /* position: relative;
+  left: 35%;
+  top: 05%; */
+  color: wheat;
+  background-color: #ff5959;
+  cursor: pointer;
+  border: none;
+  border-radius: 5px;
+  box-shadow: 0px 12px 24px rgba(105, 96, 96, 0.24);
+}
+/* end of subscribe section */
+
+/* fooetr */
+
+footer {
+  background-color: #0b0d17;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 3.2rem;
+}
+footer h1 {
+  color: #ff5959;
+  font-family: "Lobster", cursive;
+}
+footer p {
+  color: rgb(190, 190, 190);
+  font-size: 15px;
+  font-weight: lighter;
+  margin-top: 0.8rem;
+}
+/* end of footer
+ */
+
+ /* !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! */
