--- a/style.css
+++ b/style.css
@@ -16,12 +16,12 @@
 /* hero section starts */
 
 #hero {
-  /* background-image: linear-gradient(
+  background-image: linear-gradient(
       360deg,
       #131313 1%,
       rgba(38, 38, 38, 0) 100%
     ),
-    url(/Img/donation0.jpg); */
+    url(./Img/donation0.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
